--- a/docs/guidelines/color.mdx
+++ b/docs/guidelines/color.mdx
@@ -27,6 +27,7 @@ import '@site/docs/guidelines.scss';
 
 export const CSAA = () => (
   <div layout="panel">
+    <h2>| Products</h2>
     <Tabs
       defaultValue="mypolicy"
       values={[
@@ -74,6 +75,7 @@ export const CSAA = () => (
 
 export const Mobilitas = () => (
   <div layout="panel">
+    <h2>| Products</h2>
     <Tabs
       defaultValue="rideshare"
       values={[
@@ -106,6 +108,7 @@ export const Mobilitas = () => (
   <div type="section">
     <p>Browse our brand's comprehensive spectrum's of bold hues and accessible neutrals to meet most design needs.</p>
   </div>
+  <h2>| Brands</h2>
   <Tabs
     defaultValue="csaa"
     values={[
@@ -121,14 +124,14 @@ export const Mobilitas = () => (
       }
     ]}>
     <TabItem value="csaa">
-      <h3>Brand Palette</h3>
+      <h3>CSAA Brand</h3>
       <p>The CSAA color palette is aligned with color use in web applications and support for accessibility. The colors below constitute the expanded color palette for CSAA. Text colors displayed in light or dark tints represent CSAA's recommended accessible pairing with the color.</p>
       <ColorTable colors={brands.csaa.colors} tier="csaa" />
       <p>These color swatches represent primary colors, recommended for use as the main color for your design. The remaining colors are considered secondary. They may be used for charts, graphs, illustrations and other areas that call for color accent.</p>
       <CSAA />
     </TabItem>
     <TabItem value="mobilitas">
-      <h3>Brand Palette</h3>
+      <h3>Mobilitas Brand</h3>
       <p>The Mobilitas color palette is aligned with color use in web applications and support for accessibility. The colors below constitute the expanded color palette for Mobilitas. Text colors displayed in light or dark tints represent Mobilitas’ recommended accessible pairing with the color.</p>
       <ColorTable colors={brands.mobilitas.colors} tier="mobilitas" />
       <p>Derived from a base palette of thirty-six colors, including primary, secondary, and neutral color spectrums.</p>
