Added pixel sections but without pixel integration

--- a/docs/guidelines/accessibility.mdx
+++ b/docs/guidelines/accessibility.mdx
@@ -1,28 +1,21 @@
 ---
-id: typography
-title: Typography Guidelines
+id: accessibility
+title: Accessibility
 hide_title: true
 hide_table_of_contents: false
-sidebar_label: Typography
-description: Outlines style guidelines for typography
+sidebar_label: Accessibility
+description: We cover as many best practices for accessibility out of the box
 keywords:
-  - typography
+  - accessibility
   - styleguide
+  - design_guidelines
 ---
 
 import {
-  AntPage,
-  FontFamily,
-  FontSize
+  AntPage
 } from '@site/docs/guidelines/components';
 
-import {
-  Brands
-} from '@site/docs/guidelines/typography/index';
-
-import '@site/docs/guidelines.scss';
-
-<AntPage title="Typography" icon="typography">
+<AntPage title="Accessibility" icon="accessibility">
   <div type="section">
     <h4>Type is an essential part of a design system. </h4>
     <p>Text is the major channel for users to understand application content and complete their work, and a well designed font system will greatly enhance the user’s reading experience and work efficiency.</p>
