--- a/docs/guidelines/color.mdx
+++ b/docs/guidelines/color.mdx
@@ -3,7 +3,7 @@ id: color
 title: Color Guidelines
 hide_title: true
 hide_table_of_contents: false
-sidebar_label: Colors
+sidebar_label: Color
 description: How do I find you when I cannot solve this problem
 keywords:
   - colors
@@ -20,7 +20,7 @@ import {
 
 import '@site/docs/guidelines.scss';
 
-<AntPage title="Color" icon="/icons/sprite/color_palette1.svg">
+<AntPage title="Color" icon="color">
   <div type="section">
     <p>Browse our brand's comprehensive spectrum's of bold hues and accessible neutrals to meet most design needs.</p>
   </div>
