--- a/docs/guidelines/icons.mdx
+++ b/docs/guidelines/icons.mdx
@@ -1,33 +1,12 @@
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+---
+id: icons
+title: Icons
+hide_title: true
+hide_table_of_contents: false
+sidebar_label: Icons
+description: We cover as many best practices for accessibility out of the box
+---
 
-I am referencing a [document](doc1.md). Reference to another [document in a folder](folder/doc3.md).
-[Relative document](../doc2.md) referencing works as well.
-
-
-<Tabs
-  groupId="operating-systems"
-  defaultValue="win"
-  values={[
-    {label: 'Windows', value: 'win'},
-    {label: 'macOS', value: 'mac'},
-  ]
-  }>
-  <TabItem value="win">Use Ctrl + C to copy.</TabItem>
-  <TabItem value="mac">Use Command + C to copy.</TabItem>
-</Tabs>
-
-<Tabs
-  groupId="operating-systems"
-  defaultValue="win"
-  values={[
-    {label: 'Windows', value: 'win'},
-    {label: 'macOS', value: 'mac'},
-  ]
-  }>
-  <TabItem value="win">Use Ctrl + V to paste.</TabItem>
-  <TabItem value="mac">Use Command + V to paste.</TabItem>
-</Tabs>
 
 :::note
 The content and title *can* include markdown.
@@ -48,77 +27,3 @@ Warning! You better pay attention
 :::danger
 Danger danger, mayday
 :::
-
-```jsx title="/src/components/HelloCodeTitle.js"
-function HelloCodeTitle(props) {
-  return <h1>Hello, {props.name}</h1>;
-}
-```
-
-```jsx {3}
-function HighlightSomeText(highlight) {
-  if (highlight) {
-    return 'This text is highlighted!';
-  }
-
-  return 'Nothing highlighted';
-}
-```
-
-```jsx {1,4-6,11}
-import React from 'react';
-
-function MyComponent(props) {
-  if (props.isBar) {
-    return <div>Bar</div>;
-  }
-
-  return <div>Foo</div>;
-}
-
-export default MyComponent;
-```
-
-  ```jsx
-function HighlightSomeText(highlight) {
-  if (highlight) {
-    // highlight-next-line
-    return 'This text is highlighted!';
-  }
-
-  return 'Nothing highlighted';
-}
-
-function HighlightMoreText(highlight) {
-  // highlight-start
-  if (highlight) {
-    return 'This range is highlighted!';
-  }
-  // highlight-end
-
-  return 'Nothing highlighted';
-}
-```
-
-```jsx live
-function Clock(props) {
-  const [date, setDate] = useState(new Date());
-  useEffect(() => {
-    var timerID = setInterval(() => tick(), 1000);
-
-    return function cleanup() {
-      clearInterval(timerID);
-    };
-  });
-
-  function tick() {
-    setDate(new Date());
-  }
-
-  return (
-    <div>
-      <h2>It is {date.toLocaleTimeString()}.</h2>
-    </div>
-  );
-}
-```
