--- a/docs/guidelines/spacing.mdx
+++ b/docs/guidelines/spacing.mdx
@@ -1,17 +1,17 @@
 ---
-id: accessibility
-title: Accessibility
+id: spacing
+title: Spacing
 hide_title: true
 hide_table_of_contents: false
-sidebar_label: Accessibility
-description: We cover as many best practices for accessibility out of the box
+sidebar_label: Spacing
+description: A properly structured layout enforces an optimal, consistent experience across applications
 ---
 
 import {
   AntPage
 } from '@site/docs/guidelines/components';
 
-<AntPage title="Accessibility" icon="accessibility">
+<AntPage title="Spacing" icon="layout">
   <div type="section">
     <h4>Type is an essential part of a design system. </h4>
     <p>Text is the major channel for users to understand application content and complete their work, and a well designed font system will greatly enhance the user’s reading experience and work efficiency.</p>
