--- a/docs/guidelines/typography.mdx
+++ b/docs/guidelines/typography.mdx
@@ -11,9 +11,7 @@ keywords:
 ---
 
 import {
-  AntPage,
-  FontFamily,
-  FontSize
+  AntPage
 } from '@site/docs/guidelines/components';
 
 import {
