Moved ApolloProvider outside

--- a/docs/guidelines/color.mdx
+++ b/docs/guidelines/color.mdx
@@ -5,6 +5,7 @@ hide_title: true
 hide_table_of_contents: false
 sidebar_label: Color
 description: How do I find you when I cannot solve this problem
+slug: /
 keywords:
   - colors
   - styleguide
