Debuggin more of the graphql data

--- a/docs/guidelines/typography.mdx
+++ b/docs/guidelines/typography.mdx
@@ -5,14 +5,11 @@ hide_title: true
 hide_table_of_contents: false
 sidebar_label: Typography
 description: Outlines style guidelines for typography
-keywords:
-  - typography
-  - styleguide
 ---
 
 import {
   AntPage
-} from '@site/docs/guidelines/components';
+} from '@site/src/components';
 
 import {
   Brands
