--- a/docs/guidelines/color.mdx
+++ b/docs/guidelines/color.mdx
@@ -18,7 +18,7 @@ import {
 
 import '@site/docs/guidelines.scss';
 
-<AntPage title="Color" icon="color">
+<AntPage title="Color">
   <div type="section">
     <p>Browse our brand's comprehensive spectrum's of bold hues and accessible neutrals to meet most design needs.</p>
   </div>
