--- a/docs/guidelines/typography.mdx
+++ b/docs/guidelines/typography.mdx
@@ -17,7 +17,7 @@ import {
 
 import '@site/docs/guidelines.scss';
 
-<AntPage title="Typography" icon="typography">
+<AntPage title="Typography">
   <div type="section">
     <h4>Type is an essential part of a design system. </h4>
     <p>Text is the major channel for users to understand application content and complete their work, and a well designed font system will greatly enhance the user’s reading experience and work efficiency.</p>
