Slight change to table of contensts

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,6 @@
 # Specimens for Design Systems
 
 [Color](color/)
-[Color](typography/)
-[Color](preview/)
+[Typography](typography/)
+[Demo](preview/)
+[Code](code/)
