Broke out color and type page structure

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,6 +1,8 @@
-# Specimens for Design Systems
+# CSAA Design: Style Guide
 
 [Color](color/)
 [Typography](typography/)
+
+#### Dev links
 [Demo](preview/)
 [Code](code/)
