Route issue but menu spans full height

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,8 +1,5 @@
 # CSAA Design: Style Guide
 
-[Color](color/)
-[Typography](typography/)
-
-#### Dev links
-[Demo](preview/)
-[Code](code/)
+[Color](guidelines/color/)
+[Typography](guidelines/typography/)
+[Icons](guidelines/icons/)
