Minor repair to logic for chosing which page meta to read

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,5 @@
 # CSAA Design: Style Guide
 
-[Color](guidelines/color/)
-[Typography](guidelines/typography/)
-[Icons](guidelines/icons/)
+[Color](guidelines/color)
+[Typography](guidelines/typography)
+[Icons](guidelines/icons)
